fix width on phone and removed one sponsor

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                 <img src="./kqlogi.png" alt="kws logo">
             </div>
 
-            <div class="logohold">
+            <!-- <div class="logohold">
                 <img src="./kr logo.jpeg" alt="kws logo">
-            </div>
+            </div> -->
 
         </div>
 
