added form submission functionality using netlify

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <div class="container Contact" id="Contact">
         <h4>Fill in this form to reach out or use any of our social media links</h4>
         
-        <form method="post" name="ContactForm">
+        <form method="post" name="ContactForm" data-netlify="true>
             <Label for="Name">Name</Label>
             <input type="text" name="Name" id="Name" placeholder="Your Full Name" required>
             <label for="Email">Email</label>
