--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <input type="email" name="Email" id="Email" placeholder="abcdef@sgddg.com" required>
             <label for="msg">Your Message</label>
             <textarea name="mdg" id="msg" cols="30" rows="10" placeholder="Type your message here" required></textarea>
-            <button>Send Message</button>
+            <button type="submit">Send Message</button>
         </form>
 
         <div class="social">
